--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "decent-agenda",
+   "id": "nervous-czech",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "skilled-liabilities",
+   "id": "general-galaxy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "taken-portrait",
+   "id": "creative-cocktail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sweet-scholarship",
+   "id": "documented-economics",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "editorial-persian",
+   "id": "strong-glass",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "celtic-nickel",
+   "id": "banned-thesis",
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "respective-pleasure",
+   "id": "special-puppy",
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "gentle-number",
+   "id": "ignored-arnold",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "wicked-distinction",
+   "id": "residential-trail",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "related-imaging",
+   "id": "incident-engineer",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "human-present",
+   "id": "reliable-tribe",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "oriental-jordan",
+   "id": "overhead-courage",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "postal-mainstream",
+   "id": "indoor-familiar",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "alternative-locking",
+   "id": "controlled-kazakhstan",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "supreme-hopkins",
+   "id": "numerical-curtis",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "female-spring",
+   "id": "annoying-agreement",
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "subject-interference",
+   "id": "sporting-faculty",
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "automatic-pulse",
+   "id": "informed-discrimination",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "straight-pattern",
+   "id": "ultimate-flashing",
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "solid-cleaner",
+   "id": "seasonal-dallas",
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "settled-mouse",
+   "id": "indoor-brain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "simplified-spread",
+   "id": "vocational-wealth",
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "hired-notification",
+   "id": "handed-pathology",
    "metadata": {},
    "outputs": [
     {
@@ -1078,7 +1078,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "stunning-shade",
+   "id": "progressive-shaft",
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "scenic-blogger",
+   "id": "stuffed-firewall",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1119,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "permanent-animal",
+   "id": "gross-conference",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "assured-standing",
+   "id": "acting-touch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "following-harvey",
+   "id": "bright-snapshot",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "elect-cutting",
+   "id": "streaming-genius",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "reflected-frequency",
+   "id": "instructional-comedy",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "stupid-racing",
+   "id": "collaborative-origin",
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "starting-baking",
+   "id": "banned-aircraft",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "reflected-final",
+   "id": "advanced-ethernet",
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "comfortable-drama",
+   "id": "cheap-organ",
    "metadata": {},
    "outputs": [
     {
@@ -1613,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "trained-madison",
+   "id": "living-protection",
    "metadata": {},
    "outputs": [
     {
@@ -1720,7 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "assigned-incentive",
+   "id": "polar-techno",
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1750,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "injured-petersburg",
+   "id": "numeric-ethiopia",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "fundamental-trail",
+   "id": "virgin-skating",
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "appreciated-guide",
+   "id": "bigger-grave",
    "metadata": {},
    "outputs": [
     {
@@ -1832,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "finite-charge",
+   "id": "contrary-photography",
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "disciplinary-classic",
+   "id": "focused-dressing",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "aggregate-collect",
+   "id": "interpreted-shoulder",
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1901,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "progressive-divide",
+   "id": "internal-tuesday",
    "metadata": {},
    "outputs": [
     {
@@ -1924,7 +1924,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "noticed-pontiac",
+   "id": "sexual-infrared",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1936,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "joined-seeking",
+   "id": "hollywood-sound",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "supreme-water",
+   "id": "caroline-lemon",
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1992,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "cubic-welding",
+   "id": "fabulous-cement",
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2020,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "turkish-baghdad",
+   "id": "efficient-model",
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2048,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "tamil-beverage",
+   "id": "popular-attack",
    "metadata": {},
    "outputs": [
     {
@@ -2076,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "returning-victor",
+   "id": "infectious-excellence",
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2104,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "associate-scotland",
+   "id": "warming-george",
    "metadata": {},
    "outputs": [
     {
@@ -2132,7 +2132,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "illegal-monday",
+   "id": "alike-module",
    "metadata": {},
    "outputs": [
     {
@@ -2160,7 +2160,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "saving-database",
+   "id": "tired-terrain",
    "metadata": {},
    "outputs": [
     {
@@ -2188,7 +2188,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "large-nicholas",
+   "id": "dressed-explosion",
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "violent-stone",
+   "id": "coral-karma",
    "metadata": {},
    "outputs": [
     {
@@ -2244,7 +2244,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "incorporated-billy",
+   "id": "laughing-magic",
    "metadata": {},
    "outputs": [
     {
@@ -2272,7 +2272,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "residential-lloyd",
+   "id": "urban-metadata",
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "nuclear-mainland",
+   "id": "orange-reception",
    "metadata": {},
    "outputs": [
     {
@@ -2328,7 +2328,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "involved-clothing",
+   "id": "broke-horror",
    "metadata": {},
    "outputs": [
     {
@@ -2356,7 +2356,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "federal-norman",
+   "id": "sticky-peripheral",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "according-lingerie",
+   "id": "general-running",
    "metadata": {},
    "outputs": [
     {
@@ -2417,7 +2417,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "excessive-latino",
+   "id": "amazing-training",
    "metadata": {},
    "outputs": [
     {
@@ -2452,7 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "purple-valuable",
+   "id": "conservative-walnut",
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2472,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "opening-particle",
+   "id": "expected-sunday",
    "metadata": {},
    "outputs": [
     {
@@ -2531,7 +2531,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "aboriginal-bottle",
+   "id": "level-membrane",
    "metadata": {},
    "outputs": [
     {
@@ -2590,7 +2590,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "worse-removal",
+   "id": "educational-supplement",
    "metadata": {},
    "outputs": [
     {
@@ -2649,7 +2649,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "young-rwanda",
+   "id": "stable-publicity",
    "metadata": {},
    "outputs": [
     {
@@ -2684,7 +2684,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "religious-roulette",
+   "id": "swedish-sullivan",
    "metadata": {},
    "outputs": [
     {
@@ -2743,7 +2743,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "elegant-missouri",
+   "id": "alternative-citizenship",
    "metadata": {},
    "outputs": [
     {
@@ -2802,7 +2802,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "tight-immunology",
+   "id": "turkish-primary",
    "metadata": {},
    "outputs": [
     {
@@ -2861,7 +2861,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "aerial-clinton",
+   "id": "thrown-right",
    "metadata": {},
    "outputs": [
     {
@@ -2896,7 +2896,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "numeric-washer",
+   "id": "representative-intellectual",
    "metadata": {},
    "outputs": [
     {
@@ -2923,7 +2923,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "arabic-clock",
+   "id": "twenty-carol",
    "metadata": {},
    "outputs": [
     {
@@ -2946,7 +2946,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "amended-natural",
+   "id": "corporate-field",
    "metadata": {},
    "outputs": [
     {
@@ -2973,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "narrow-superintendent",
+   "id": "military-globe",
    "metadata": {},
    "outputs": [
     {
@@ -3009,11 +3009,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 139,
+   "id": "equivalent-schedule",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        5.263158\n",
+       "Suburban    26.315789\n",
+       "Urban       68.421053\n",
+       "Name: ride_id, dtype: float64"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of rides for each city type.\n",
+    "ride_percents = 100 * pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"] / pyber_data_df[\"ride_id\"].count()\n",
+    "ride_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "featured-silver",
+   "id": "sharing-beads",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build Pie Chart\n",
+    "plt.subplots(figsize=(10, 6))\n",
+    "plt.pie(ride_percents,\n",
+    "    labels=[\"Rural\", \"Suburban\", \"Urban\"],\n",
+    "    colors=[\"gold\", \"lightskyblue\", \"lightcoral\"],\n",
+    "    explode=[0, 0, 0.1],\n",
+    "    autopct='%1.1f%%',\n",
+    "    shadow=True, startangle=150)\n",
+    "plt.title(\"% of Total Fares by City Type\")\n",
+    "# Change the default font size from 10 to 14.\n",
+    "mpl.rcParams['font.size'] = 14\n",
+    "# Save Figure\n",
+    "plt.savefig(\"analysis/Fig5.png\")\n",
+    "# Show Figure\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
